--- a/QuickPollUI/Components/CountDownTimerComponent.razor
+++ b/QuickPollUI/Components/CountDownTimerComponent.razor
@@ -116,8 +116,8 @@
 
     public void Dispose()
     {
-        _timeLimitTimer.Elapsed -= new ElapsedEventHandler(CountDownTimeLimit);
-        _startsInTimer.Elapsed -= new ElapsedEventHandler(CountDownStartsIn);
+        _timeLimitTimer.Dispose();
+        _startsInTimer.Dispose();
     }
 }
 
