--- a/QuickPollUI/Shared/Button.razor
+++ b/QuickPollUI/Shared/Button.razor
@@ -12,46 +12,19 @@
     public RenderFragment ChildContent { get; set; }
 
     [Parameter]
-    public string Type { get; set; } = "button";
+    public string Type { get; set; }
 
     [Parameter]
     public EventCallback HandleClick { get; set; }
 
     [Parameter]
-    public EventCallback<MouseEventArgs> HandleClickWithMouseArgs { get; set; }
-
-    [Parameter]
     public bool Disabled { get; set; }
 
-    [Parameter]
-    public bool UseMouseEventArgs { get; set; }
-
-    public async Task OnClick()
-    {
-        if (UseMouseEventArgs)
-        {
-            await HandleClickWithMouseArgs.InvokeAsync();
-            return;
-        }
+    public async Task OnClick() =>
         await HandleClick.InvokeAsync();
-    }
 }
 
 <style>
-
-    /*.login-btn {
-        border: 2px solid transparent;
-        background: #BF40BF;
-        color: #fff;
-        text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
-        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
-    }
-
-        .login-btn:hover {
-            background: #fff;
-            color: #BF40BF;
-            border: 2px solid #BF40BF;
-        }*/
 
     .secondary {
         border: 2px solid transparent;
