--- a/QuickPollUI/Shared/CascadingModalWrapper.razor
+++ b/QuickPollUI/Shared/CascadingModalWrapper.razor
@@ -42,7 +42,7 @@
     private bool copyLinkConfirmation;
     private bool copyPollIdConfirmation;
 
-    public void ShowModal(MouseEventArgs mouseEventArgs, Type componentType, 
+    public void ShowModal(Type componentType, 
         Dictionary<string, object> componentParameters, bool isLogin)
     {
         modalPosition = $"position: fixed; left: 50%; top: 50% ; transform: translate(-50%,-50%);";
