--- a/QuickPollUI/Pages/_Host.cshtml
+++ b/QuickPollUI/Pages/_Host.cshtml
@@ -20,6 +20,7 @@
     </head>
     <body>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
+        <persist-component-state />
 
         <div id="blazor-error-ui">
             <environment include="Staging,Production">
