separated broadcast method calls from poll mutation methods

--- a/QuickPollUI/Components/CreatePollFormComponent.razor
+++ b/QuickPollUI/Components/CreatePollFormComponent.razor
@@ -149,7 +149,8 @@
 
         LoggedInUser.PollIds.Add(poll.PollId.ToString());
         await _userData.ReplaceOneAsync(LoggedInUser.UserId, LoggedInUser, "UserId");
-        await _pollManager.AddPoll(poll);
+        _pollManager.AddPoll(poll);
+        await _pollManager.BroadcastAllPolls();
 
         poll = new()
         {
