--- a/QuickPollUI/Components/CountDownTimerComponent.razor
+++ b/QuickPollUI/Components/CountDownTimerComponent.razor
@@ -109,6 +109,7 @@
             _startsInTimer.Stop();
             Poll.HasStarted = true;
             _timeLimitTimer.Start();
+            InvokeAsync(PollHasStarted.InvokeAsync);
         }
 
         InvokeAsync(StateHasChanged);
@@ -121,137 +122,3 @@
     }
 }
 
-<style>
-
-    .divider {
-        color: #000;
-    }
-
-    .clock-text {
-        font-size: 1em;
-        font-weight: 700;
-        margin-top: .35em;
-    }
-
-    .times {
-        display: flex;
-        justify-content: space-evenly;
-        position: relative;
-    }
-
-    .timer {
-        flex-direction: column;
-        display: flex;
-        width: 50%;
-        margin: 0 auto;
-        border: 2px solid #000;
-        padding: 10px;
-        border-radius: 6px;
-        box-shadow: inset 0 0 2.5px #000, inset 0 0 5px #000, inset 0 0 7.5px #000;
-        background-image: linear-gradient( 190deg, rgba(217, 27, 66, 0.2) 30%, rgba(69, 196, 150, 0.2) 60%);
-    }
-
-    .time-unit-day {
-        font-weight: 700;
-        font-size: 1.25em;
-        font-weight: 900;
-        letter-spacing: .25em;
-        text-shadow: 2px 2px 5px #000;
-    }
-
-    .time-unit-day::before {
-        font-weight: 700;
-        content: "Days";
-        position: absolute;
-        top: -1.75em;
-        transform: translateX(-4px);
-        text-align: center;
-        font-size: .75em;
-        letter-spacing: 0;
-        text-transform: uppercase;
-    }
-
-    .time-unit-hour {
-        font-weight: 700;
-        font-size: 1.25em;
-        font-weight: 900;
-        letter-spacing: .25em;
-        text-shadow: 2px 2px 5px #000;
-    }
-
-    .time-unit-hour::before {
-        font-weight: 700;
-        content: "Hours";
-        position: absolute;
-        top: -1.75em;
-        transform: translateX(-9px);
-        text-align: center;
-        font-size: .75em;
-        letter-spacing: 0;
-        text-transform: uppercase;
-
-    }
-
-    .time-unit-min {
-      font-weight: 700;
-      font-size: 1.25em;
-      font-weight: 900;
-      letter-spacing: .25em;
-      text-shadow: 2px 2px 5px #000;
-    }
-
-    .time-unit-min::before {
-        font-weight: 700;
-        content: "Mins";
-        position: absolute;
-        top: -1.75em;
-        transform: translateX(-4px);
-        text-align: center;
-        font-size: .75em;
-        letter-spacing: 0;
-        text-transform: uppercase;
-    }
-
-    .time-unit-sec {
-        font-weight: 900;
-        font-size: 1.25em;
-        letter-spacing: .25em;
-        text-shadow: 2px 2px 5px #000;
-    }
-
-    .time-unit-sec::before {
-        font-weight: 700;
-        content: "Secs";
-        position: absolute;
-        top: -1.75em;
-        transform: translateX(-3px);
-        text-align: center;
-        font-size: .75em;
-        letter-spacing: 0;
-        text-transform: uppercase;
-    }
-
-    .time-text {
-        margin-bottom: 3em;
-        font-weight: 700;
-    }
-
-    @@media(max-width: 991px) {
-        .timer {
-            width: 75%;
-        }
-    }
-
-    @@media(max-width: 360px) {
-        .timer {
-            width: 95%;
-        }
-    }
-
-    @@media(max-width: 300px) {
-        .time-unit-min::before {
-            transform: translateX(-2px);
-        }
-    }
-
-</style>
