--- a/QuickPollUI/_Imports.razor
+++ b/QuickPollUI/_Imports.razor
@@ -12,5 +12,5 @@
 @using QuickPollLibrary.Models
 @using System.Timers
 @using Microsoft.AspNetCore.SignalR.Client
-@using QuickPollLibrary.Helpers
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using QuickPollUI.Helpers
